# WASZP-Grand-Prix-Scoring-Helper

./: .gitignore  2026-MIDWINTERS-Sailor-anonymized.csv  README.md  afk-ralph.sh  progress.txt  pyproject.toml  python-macos-app-stack.md  ralph-once.sh  skills-lock.json
.agents/skills/tdd/: interface-design.md  mocking.md  tests.md
.claude/: settings.json
.github/workflows/: ci.yml
plans/: WASZP-GP-Scorer-PRD-v2.md
src/waszp_gp_scorer/: __init__.py  csv_loader.py  exporter.py  gui.py  models.py  scorer.py  session.py  validator.py
src/waszp_gp_scorer/phases/: __init__.py  data_entry.py  finish_entry.py  scoring.py  setup.py
src/waszp_gp_scorer/widgets/: __init__.py  sail_combobox.py
tests/: __init__.py  test_csv_loader.py  test_data_entry.py  test_export_gui.py  test_exporter.py  test_finish_entry.py  test_gui.py  test_lint.py  test_models.py  test_scorer.py  test_scoring.py  test_session.py  test_validator.py
tests/fixtures/: valid_fleet.csv
